# xplane-nanomsg

./: .gitignore  .gitmodules
plugin/: .gitignore  CMakeLists.txt  Commands.cpp  Commands.h  Config.cpp  Config.h  DataRefManager.cpp  DataRefManager.h  Info.cpp  Info.h  Plugin.cpp  Position.cpp  Position.h  Publisher.cpp  Publisher.h  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h  Statistics.cpp  Statistics.h  Utils.cpp  Utils.h  build.sh  dump-sub.cpp  hello-world.cpp  plugin.cpp  set-position.cpp  test-stub.cpp
proto/: xplane.proto
